Mapprio/main/default/objects/MapprioCheckboxResponsesForAccount__c/MapprioCheckboxResponsesForAccount__c.object-meta.xml
<CustomObject>
    <label>Mapprio Checkbox Responses for Account</label>
    <nameField>
        <label>Mapprio Checkbox Responses for Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mapprio Checkbox Responses for Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>