Mapprio/main/default/objects/MapprioCheckboxResponsesForAccount__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Mapprio Checkbox Responses for Accounts</relationshipLabel>
    <relationshipName>MapprioCheckboxResponsesForAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>