Mapprio/main/default/objects/MapprioCheckboxResponsesForAccount__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question</label>
    <referenceTo>MapprioQuestion__c</referenceTo>
    <relationshipLabel>Mapprio Checkbox Responses for Accounts</relationshipLabel>
    <relationshipName>MapprioCheckboxResponsesForAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>